# RayTracing

./: .clang-format  .gitignore  CMakeLists.txt  README.md  prepare_sdk.sh
GK LabProjekt/GK LabProjekt/: GK LabProjekt.vcxproj.filters  Objects.cpp  scene.txt
GK LabProjekt/GK LabProjekt/Debug/GK LabProjekt.tlog/: CL.command.1.tlog  GK LabProjekt.write.1u.tlog
GK LabProjekt/GK LabProjekt/Release/GK LabProjekt.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GK LabProjekt.lastbuildstate  GK LabProjekt.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GK LabProjekt/Release/: GK LabProjekt.iobj  GK LabProjekt.ipdb
New/src/: Reader.h  Solver.cpp  Utilities.h  raytracing.cpp
New/tests/: CMakeLists.txt  UT.cpp
Old/GK LabProjekt/: GK LabProjekt.sln
Old/GK LabProjekt/Debug/: GK LabProjekt.ilk
Old/GK LabProjekt/GK LabProjekt/: GK LabProjekt.vcxproj  Main.cpp  Objects.h  test.txt
Old/GK LabProjekt/GK LabProjekt/Debug/: vc141.idb
Old/GK LabProjekt/GK LabProjekt/Debug/GK LabProjekt.tlog/: CL.write.1.tlog  GK LabProjekt.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Old/GK LabProjekt/GK LabProjekt/Release/GK LabProjekt.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GK LabProjekt.lastbuildstate  GK LabProjekt.write.1u.tlog  link.command.1.tlog  (+2 more)
Old/GK LabProjekt/Release/: GK LabProjekt.iobj  GK LabProjekt.ipdb
data/: offset.txt  scene.txt
data/example/: 1.txt  10.txt  2.txt  3.txt  4.txt  6.txt  7.txt  8.txt  9.txt
data/final/: 010.txt  020.txt  030.txt  040.txt  050.txt  060.txt  070.txt  080.txt  090.txt  100.txt  110.txt  120.txt  130.txt  140.txt  150.txt  160.txt  170.txt  180.txt  190.txt  200.txt  210.txt
python_test/: make.sh  skrypt.py
src/: CMakeLists.txt  Raytracing.cpp  Reader.cpp  Solver.h  Utilities.cpp  Utilities.h  raytracing.cpp
tests/: CMakeLists.txt
